--- a/LibraryUI.Tests/LibraryUI.Tests.csproj
+++ b/LibraryUI.Tests/LibraryUI.Tests.csproj
@@ -106,6 +106,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountControllerTests.cs" />
     <Compile Include="Controllers\BookControllerTests.cs" />
+    <Compile Include="Controllers\TestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTests.cs" />
   </ItemGroup>
